<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
        android:layout_height="wrap_content" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:padding="16dp"
        android:orientation="vertical">

    <TextView
            android:id="@+id/logout_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout_confirm"
            android:textSize="16sp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/cancel_button"/>

    <Button
            android:id="@+id/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/logout_text"
            app:layout_constraintLeft_toRightOf="@id/cancel_button" android:layout_marginLeft="8dp"
            android:layout_marginTop="36dp"/>
    <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/logout_text"
            app:layout_constraint_toRightOf="@id/logout_text"
            tools:layout_editor_absoluteX="16dp" android:layout_marginTop="36dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>